test/pkg/build-error-unknown-extern-package/dora-build.out
error: no package with name `helper` was found.
--> test/pkg/build-error-unknown-extern-package/src/main.dora:1:1
 | extern package helper;
   ~~~~~~~~~~~~~~~~~~~~~~
 | 
 | fn main() {}
1 error found.
Error: "compilation failed"
